<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="9"
    tools:context="com.example.btet.myguitartransposer.MainActivity">

    <TableRow
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/PleaseSelect"/>
    </TableRow>
    <TableRow
        android:gravity="center_horizontal"
        android:layout_weight="1">

         <EditText
             android:id="@+id/editText3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
    </TableRow>
    <TableRow
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begKey" />

    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/targetKey" />

    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow
        android:layout_weight="1">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:onClick="onClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Clear"
            android:id="@+id/button2"
            android:layout_column="1"
            android:onClick="onClick2"/>
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/textView3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/result"/>
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/textView4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
    </TableRow>

</TableLayout>
